--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,6 +4,11 @@
     </IfModule>
 
     RewriteEngine On
+    
+    # Force HTTPS
+    RewriteCond %{HTTPS} !=on
+    RewriteCond %{HTTP:X-Forwarded-Proto} !=https
+    RewriteRule ^/?(.*) https://%{HTTP_HOST}/$1 [R,L]
 
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
